# cv-toolkit

./: .gitignore  pyproject.toml
assets/: classification_test.csv
assets/binary/gt/: airplane.json  bicycle.json  bird.json  boat.json  bus.json  car.json  cat.json  dog.json  flower.json  horse.json  house.json  person.json  traffic_light.json  tree.json  truck.json
assets/binary/pred/: airplane.json  bicycle.json  bird.json  boat.json  bus.json  car.json  cat.json  dog.json  flower.json  horse.json  house.json  person.json  traffic_light.json  tree.json  truck.json
assets/multiclass/gt/: airplane.json  bicycle.json  bird.json  boat.json  bus.json  car.json  cat.json  dog.json  flower.json  horse.json  house.json  person.json  traffic_light.json  tree.json  truck.json
assets/multiclass/pred/: airplane.json  bicycle.json  bird.json  boat.json  bus.json  car.json  cat.json  dog.json  flower.json  horse.json  house.json  person.json  traffic_light.json  tree.json  truck.json
assets/multilabel/gt/: airplane.json  bicycle.json  bird.json  boat.json  bus.json  car.json  cat.json  dog.json  flower.json  horse.json  house.json  person.json  traffic_light.json  tree.json  truck.json
assets/multilabel/pred/: airplane.json  bicycle.json  bird.json  boat.json  bus.json  car.json  cat.json  dog.json  flower.json  horse.json  house.json  person.json  traffic_light.json  tree.json  (+1 more)
assets/test_sample/: g.json
notebook/: metric_module.ipynb  plot_module.ipynb
src/cvcore/: __init__.py
src/image_operations/: enhancement.py  io.py
src/plot_operations/: plot.py
(+10 files in other folders)
