[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvcore" # This is the name you will use for 'pip install'
version = "0.1.0"
description = "A functional library for computer vision, object detection, and image segmentation operations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]